Fixing line heights too small.

--- a/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
+++ b/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
@@ -23,6 +23,7 @@ h3,
 h4,
 h5 {
   margin: 0;
+  line-height: 120%;
 }
 
 table.fc-header {
